Fix scrollbar in dropdown

--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -27,3 +27,13 @@
     margin-top: auto;
   }
 }
+
+::-webkit-scrollbar {
+  background: white;
+  width: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: lightgray;
+  border-radius: 5px;
+}
